# cfs-bridge

./: .coveragerc  .gitignore  .gitmodules  Makefile  PROJECT_SUMMARY.md  README.md  check_integration.sh  docker-compose.yml  integration_suite.py  pyproject.toml  run_mission.sh
firmware/: Dockerfile
firmware/apps/bridge_app/: CMakeLists.txt
firmware/apps/bridge_app/fsw/inc/: bridge_app.h
firmware/apps/rad_app/: CMakeLists.txt
firmware/apps/therm_app/: CMakeLists.txt
firmware/defs/: cpu1_cfe_es_startup.scr  targets.cmake
firmware/patches/: to_lab_sub.c
ground_station/: Dockerfile  __init__.py  app.py  ccsds_utils.py  command_dispatcher.py  ground_app.py  integration_test.py  requirements.txt  telemetry_receiver.py  test_ccsds_utils.py
ground_station/commands/: __init__.py  solar_array.py
ground_station/telemetry/: __init__.py  parser.py  processor.py  ui_utils.py
ground_station/tests/: test_command_dispatcher.py  test_ground_app_init.py  test_ground_app_main.py  test_parser.py  test_receiver_listen_loop.py  test_solar_array_commands.py  test_telemetry_processor.py  test_telemetry_receiver.py  test_telemetry_receiver_stop.py  test_ui_utils.py
scripts/: mock_telemetry_injector.py
sensor_manager/: Dockerfile  __init__.py  manager_app.py  verify_core.py
sensor_manager/core/: __init__.py  base_sensor.py  ccsds_utils.py  mission_registry.py
sensor_manager/sensors/: __init__.py  radiation_sensor.py  thermal_sensor.py
sensor_manager/tests/: integration_test.py  test_ccsds.py  test_ccsds_utils.py  test_sensors.py
(+5 files in other folders)
